--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
 <section class="ae-container-fluid rk-main">
      <!--app-portafolio></app-portafolio>-->
      <!--app-about></app-about>-->
-     <app-items></app-items>  
+     <!--app-items></app-items>-->
+     <router-outlet></router-outlet>  
              
 </section>     
 
