--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -17,7 +17,7 @@
       <nav class="rk-navigation">
         <ul class="rk-menu">
           <li routerLinkActive="active" class="rk-menu__item">
-            <a routerLink="" class="rk-menu__link">Home</a>
+            <a routerLink="home" class="rk-menu__link">Home</a>
           </li>
           <li routerLinkActive="active" class="rk-menu__item">
             <a routerLink="about" class="rk-menu__link">About</a>
