--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -2,8 +2,8 @@
 <section class="ae-container-fluid ae-container-fluid--inner rk-portfolio">
     <!-- 1 -->
 
-    <div>
-      <h2>Cargando Productos...</h2>
+    <div align="center" *ngIf="productoService.cargando">
+      <h2>Cargando...</h2>
 
       <div class="loader loader--style1" title="0">
         <svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -24,13 +24,16 @@
         </svg>
       </div>
 
+      <p>
+        Espere por favor
+      </p>
+
 
     </div>
-    
+     
   
-  
-  
-    <div class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4">
+    <div *ngIf="!productoService.cargando"
+        class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4">
       
       
       <a *ngFor="let producto of productoService.producto"
