--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -36,7 +36,7 @@
         class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4">
       
       
-      <a *ngFor="let producto of productoService.producto"
+      <a *ngFor="let producto of productoService.productos"
          routerLink="/items"  class="animated fadeIn rk-item ae-masonry__item">
         <img src="assets/productos/{{producto.url}}.jpg" alt="">
         <div class="item-meta">
