--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -37,9 +37,9 @@
       
       
       <a *ngFor="let producto of productoService.productos"
-         routerLink="/items"  class="animated fadeIn rk-item ae-masonry__item">
+         [routerLink]="['/items', producto.cod ]"  class="animated fadeIn rk-item ae-masonry__item">
         <img src="assets/productos/{{producto.url}}.jpg" alt="">
-        <div class="item-meta">
+        <div [routerLink]="['/items', producto.cod ]" class="item-meta">
           <h2>{{ producto.titulo}}</h2>
           <p>{{ producto.categoria}}</p>
         </div>
