--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -1,5 +1,4 @@
-<div 
-        class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4">
+<div class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4">
       
       
       <a *ngFor="let producto of productoService.productosFiltrado"
